--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aframe": "^1.0.4",
+    "aframe-particle-system-component": "^1.1.3",
+    "aframe-react": "^4.4.0",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
+    "preact": "^10.3.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
