--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aframe": "^1.0.4",
+    "aframe-animation-component": "^5.1.2",
     "aframe-particle-system-component": "^1.1.3",
-    "aframe-react": "^4.4.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
-    "preact": "^10.3.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
